@@ -9,7 +9,7 @@
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>22</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
@@ -19,6 +19,7 @@
 
         <junit-jupiter.version>5.11.0-M2</junit-jupiter.version>
         <assertj-core.version>3.26.0</assertj-core.version>
+        <wiremock.version>3.0.3</wiremock.version>
 
         <jackson.version>2.17.1</jackson.version>
 
@@ -79,7 +80,7 @@
         <dependency>
             <groupId>org.wiremock</groupId>
             <artifactId>wiremock</artifactId>
-            <version>3.0.1</version>
+            <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -162,7 +163,7 @@
                 <artifactId>prettier-maven-plugin</artifactId>
                 <version>0.22</version>
                 <configuration>
-                    <prettierJavaVersion>1.6.1</prettierJavaVersion>
+                    <prettierJavaVersion>2.6.0</prettierJavaVersion>
                     <printWidth>150</printWidth>
                     <tabWidth>4</tabWidth>
                     <useTabs>false</useTabs>
@@ -192,7 +193,11 @@
                 <configuration>
                     <compilerArgument>-Xlint:all</compilerArgument><!-- -Werror -->
                     <release>${java.version}</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
+
             </plugin>
 
             <plugin>
@@ -230,6 +235,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
